# angewandteProgrammierung

./: Exploration  Log  README.md  Readme.md  api_test.py  frontend.py  main-day-4-test.py  main-day-4.py  main.py  main_sqlmodel.py  notes.db  pyproject.toml  sqlmodel_copy_template.py  temp_readme.md  test_notes.py  work-log.md
Day-file-presentaition/: day-02-presentation.md
Exploration/: main-day-4.py
data/: notes.json
